@@ -10,11 +10,8 @@ import org.json.JSONArray;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Infrastructure implementation of CodesListRepository using SPARQL and RDF4J.
@@ -63,39 +60,11 @@ public class CodesListRepositoryImpl implements CodesListRepository {
                         CodesListDomain domain = CodesListConverter.toDomain(codesList);
                         return domain;
                     })
-                    .collect(Collectors.toList());
+                    .toList();
                     
         } catch (Exception e) {
             throw new RuntimeException("Failed to retrieve codes lists", e);
         }
     }
 
-    
-    /**
-     * Parses a comma-separated properties string into a Set.
-     * 
-     * @param properties comma-separated list of properties
-     * @return Set of trimmed property names (empty set if null/empty input)
-     */
-    private Set<String> parseProperties(String properties) {
-        if (properties == null || properties.trim().isEmpty()) {
-            return Collections.emptySet();
-        }
-        
-        return Arrays.stream(properties.split(","))
-                .map(String::trim)
-                .filter(property -> !property.isEmpty())
-                .collect(Collectors.toSet());
-    }
-    
-    /**
-     * Determines if a lazy-loaded field should be loaded based on the requested properties.
-     * 
-     * @param requestedProperties Set of requested property names (empty means all properties)
-     * @param fieldName the name of the lazy-loaded field to check
-     * @return true if the field should be loaded
-     */
-    private boolean shouldLoadLazyField(Set<String> requestedProperties, String fieldName) {
-        return requestedProperties.isEmpty() || requestedProperties.contains(fieldName);
-    }
 }
